# spider-qwen

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPIDER_QWEN_BUILD_PLAN.md  pyproject.toml
docs/: BUILD_LOG.md  architecture.md  benchmarking.md  engineering.md  evidence_model.md  geo_strategy.md  memory_design.md  policy_config.md  procurement_modes.md  ranking.md  tool_usage.md
spider_qwen/: __init__.py
spider_qwen/agent/: __init__.py  budget.py  compiler.py  controller.py  execution_context.py  planner.py  policy.py  tool_registry.py
spider_qwen/api/: __init__.py  cli.py  (+3 more)
tests/: conftest.py  test_audit_refuses_actions.py  test_belief_fusion.py  test_benchmark_electronics.py  test_budget.py  test_calibration_harness.py  test_citation_rank.py  test_compiler.py  test_conformal.py  test_contradiction.py  test_controller.py  test_corrective.py  test_cost_router.py  test_cove.py  test_discovery_sidecar.py  test_disputed_excluded_from_rfq.py  test_dmsms.py  test_e2e.py  test_electronics.py  test_enhancements.py  test_evidence_ledger.py  test_extraction_retry.py  test_fetch_judge_gate.py  test_gram_lite.py  test_graph.py  test_graph_retrieve.py  test_grounding_and_grade.py  test_ledger_wal.py  test_legacy_ocr.py  test_mcp.py  test_memory_phase4.py  test_models_config.py  test_modes.py  test_no_unsourced_output.py  test_page_judge.py  test_pricing.py  test_privacy_gate.py  test_process_reward.py  test_query_rewrite.py  test_quote_channel.py  (+19 more)
web/: api.js  index.html  styles.css  tokens.css
(+133 files in other folders)
