[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spider-qwen"
version = "0.1.0"
description = "Deterministic, evidence-first procurement research agent (Qwen controller + TinyFish search/fetch)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "spider-qwen contributors" }]
keywords = ["procurement", "rfq", "agent", "qwen", "tinyfish", "websearch"]

dependencies = [
    "pydantic>=2.9",
    "PyYAML>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Qwen WebExtractor / Model Studio responses API (single-page fallback provider)
qwen = ["openai>=1.40"]
# Optional HTTP API server.
# starlette>=1.0.1 is required: it fixes the BadHost Host-header auth bypass
# (CVE-2026-48710) and supersedes the earlier multipart / FileResponse DoS fixes.
server = ["fastapi>=0.115", "uvicorn>=0.29", "starlette>=1.0.1"]
dev = ["pytest>=8.0", "pygments>=2.7"]

[project.scripts]
spider-qwen = "spider_qwen.api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["spider_qwen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.sdist]
include = ["spider_qwen", "docs", "tests", "README.md", "LICENSE"]
